--- a/src/meson.build
+++ b/src/meson.build
@@ -7,7 +7,7 @@ header_files = [
 libproject = both_libraries('project', src_files)
 
 libproject_dep = declare_dependency(
-  sources: header_files,
+  sources: [src_files, header_files],
   link_with: libproject,
   include_directories: include_directories('.'),
 )
